force-app/main/default/objects/cpm__Payment_Profile__c/cpm__Payment_Profile__c.object-meta.xml
<CustomObject>
    <description>captures the payment profiles per contact/account.
such as IBAN, legacy bank account, Credit Card etc.</description>
    <label>Payment Profile</label>
    <nameField>
        <displayFormat>PP-{0}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>