force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Account__c.field-meta.xml
<CustomField>
    <fullName>cpm__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The debitor organization.</description>
    <inlineHelpText>The debitor organization.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Profiles</relationshipLabel>
    <relationshipName>Payment_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>