force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>cpm__Bank_Account__c</fullName>
    <description>Pre-SEPA bank accounts. doesn&apos;t have the IBAN validation check.</description>
    <inlineHelpText>non IBAN bank account number. doesn&apos;t have the IBAN validation check.</inlineHelpText>
    <label>Bank Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>