force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>cpm__Bank_Code__c</fullName>
    <description>Bank identifier, depending on scheme.</description>
    <label>Bank Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>