force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>cpm__Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>