force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>cpm__Branch_Code__c</fullName>
    <label>Branch Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>