force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Card_BIN__c.field-meta.xml
<CustomField>
    <fullName>cpm__Card_BIN__c</fullName>
    <description>A bank identification number is the initial four to six numbers that appear on a credit card.</description>
    <inlineHelpText>A bank identification number</inlineHelpText>
    <label>Card BIN</label>
    <length>6</length>
    <type>Text</type>
</CustomField>