force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__City__c.field-meta.xml
<CustomField>
    <fullName>cpm__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>