force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Clearing_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Clearing_Member_Id__c</fullName>
    <label>Clearing Member Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>