force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Contact__c.field-meta.xml
<CustomField>
    <fullName>cpm__Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The debitor.</description>
    <inlineHelpText>The debitor.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Payment_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>