force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Country__c.field-meta.xml
<CustomField>
    <fullName>cpm__Country__c</fullName>
    <inlineHelpText>Please only use two-letter ISO country codes, e.g. GB for United Kingdom.</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>