force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Funding_Type__c</fullName>
    <label>Funding Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>