force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>cpm__Holder_Name__c</fullName>
    <description>Name of the account/credit card holder.</description>
    <inlineHelpText>Name of the account/credit card holder.</inlineHelpText>
    <label>Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>