force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Housename_Or_Number__c.field-meta.xml
<CustomField>
    <fullName>cpm__Housename_Or_Number__c</fullName>
    <description>House name or number.</description>
    <label>House name or number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>