force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Housenumber__c.field-meta.xml
<CustomField>
    <fullName>cpm__Housenumber__c</fullName>
    <label>Housenumber (deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>