force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Primary_Identifier__c.field-meta.xml
<CustomField>
    <fullName>cpm__Primary_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Primary Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>