force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__State_Province__c.field-meta.xml
<CustomField>
    <fullName>cpm__State_Province__c</fullName>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>