force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Street__c.field-meta.xml
<CustomField>
    <fullName>cpm__Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>