force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Suffix__c.field-meta.xml
<CustomField>
    <fullName>cpm__Suffix__c</fullName>
    <label>Suffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>