force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Token__c.field-meta.xml
<CustomField>
    <fullName>cpm__Token__c</fullName>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>