force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Token_Issuer__c.field-meta.xml
<CustomField>
    <fullName>cpm__Token_Issuer__c</fullName>
    <label>Token Issuer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>