force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>cpm__Unique_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>