force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Wallet_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Wallet_Id__c</fullName>
    <label>Wallet Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>