force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Wallet_Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Wallet_Type__c</fullName>
    <label>Wallet Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apple Pay</fullName>
            </value>
            <value>
                <fullName>Google Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>