force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Zipcode__c.field-meta.xml
<CustomField>
    <fullName>cpm__Zipcode__c</fullName>
    <label>Zipcode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>