force-app/main/default/objects/cpm__Payment_Profile__c/fields/gcf__GoCardless_Id__c.field-meta.xml
<CustomField>
    <fullName>gcf__GoCardless_Id__c</fullName>
    <externalId>true</externalId>
    <label>GoCardless Id</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>