force-app/main/default/objects/cpm__Payment_Profile__c/fields/phstr__Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>phstr__Fingerprint__c</fullName>
    <externalId>true</externalId>
    <label>Fingerprint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>