force-app/main/default/objects/cpm__Payment_Profile__c/fields/pp4ph__Payer_Id__c.field-meta.xml
<CustomField>
    <fullName>pp4ph__Payer_Id__c</fullName>
    <description>PayPal Id of the payer</description>
    <externalId>true</externalId>
    <label>Payer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>