force-app/main/default/objects/cpm__Payment_Profile__c/fields/pp4ph__Payer_Name__c.field-meta.xml
<CustomField>
    <fullName>pp4ph__Payer_Name__c</fullName>
    <label>Payer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>