force-app/main/default/objects/cpm__Payment_Profile__c/fields/pp4ph__PayPal_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>pp4ph__PayPal_Email_Address__c</fullName>
    <description>Email address of the paying user</description>
    <label>PayPal Email Address</label>
    <type>Email</type>
</CustomField>