force-app/main/default/objects/cpm__Payment_Profile__c/recordTypes/cpm__BBAN.recordType-meta.xml
<RecordType>
    <fullName>cpm__BBAN</fullName>
    <active>true</active>
    <description>Stores bank account information in local (non-IBAN) format</description>
    <label>BBAN</label>
</RecordType>