force-app/main/default/objects/cpm__Payment_Profile__c/recordTypes/cpm__Wallet.recordType-meta.xml
<RecordType>
    <fullName>cpm__Wallet</fullName>
    <active>true</active>
    <label>Wallet</label>
</RecordType>