force-app/main/default/objects/cpm__Payment_Profile__c/recordTypes/gcf__Bank_Account.recordType-meta.xml
<RecordType>
    <fullName>gcf__Bank_Account</fullName>
    <active>true</active>
    <label>Bank Account</label>
</RecordType>