force-app/main/default/objects/cpm__Payment_Profile__c/recordTypes/phstr__Bank_Account.recordType-meta.xml
<RecordType>
    <fullName>phstr__Bank_Account</fullName>
    <active>true</active>
    <description>Bank account record type for Bacs Direct Debit with Stripe as processor.</description>
    <label>Bank Account (Stripe)</label>
</RecordType>