force-app/main/default/objects/cpm__Payment_Profile__c/recordTypes/pp4ph__PayPal.recordType-meta.xml
<RecordType>
    <fullName>pp4ph__PayPal</fullName>
    <active>true</active>
    <label>PayPal</label>
</RecordType>