force-app/main/default/objects/cpm__Payment_Profile__c/validationRules/cpm__BIC_is_mandatory_for_non_NL_IBANS.validationRule-meta.xml
<ValidationRule>
    <fullName>cpm__BIC_is_mandatory_for_non_NL_IBANS</fullName>
    <active>false</active>
    <errorConditionFormula>if ( 1 == 0 , true, false )</errorConditionFormula>
    <errorDisplayField>cpm__BIC_Code__c</errorDisplayField>
    <errorMessage>BIC is mandatory for IBANs</errorMessage>
</ValidationRule>