force-app/main/default/objects/cpm__Payment_Profile__c/listViews/cpm__All.listView-meta.xml
<ListView>
    <fullName>cpm__All</fullName>
    <columns>NAME</columns>
    <columns>cpm__Contact__c</columns>
    <columns>cpm__IBAN__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>